tests/test2/pass/test-intMatrixAccess.m2
int main(){
	int a;
	int b;
	matrix int [4][4] m;
  	m = [[2,9,1,1];
        [0,2,1,1];
        [1,1,1,1];
        [3,1,1,1]];
    a = 0;
    b = 0;
    printInt(m[a][b]);
	return 0;
}