tests/test2/fail/fail-matrixBinop2.m2
int main(){
	matrix int [3][2] m;
	matrix int [1][1] m2;
  	m = [[2,9];
        [0,2];
        [1,1]];
    m2 = [[1]];
    m + m2;

    return 0;
}